fix overflow css

--- a/static/sass/screen.scss
+++ b/static/sass/screen.scss
@@ -17,6 +17,10 @@ $green: rgb(0, 189, 156);
 	box-sizing: border-box;
 }
 
+html, body {
+	overflow: hidden;
+}
+
 .container {
 	width: 100%;
 	max-width: 700px;
@@ -80,7 +84,6 @@ $green: rgb(0, 189, 156);
 		width: 100%;
 		height: 300px;
 		list-style: none;
-		overflow: hidden;
 
 		li {
 			position: absolute;
